BUG (bgs): fix an issue where sometimes the stats in the minion tooltip would not be visible

--- a/core/src/css/component/battlegrounds/bgs-card-tooltip.component.scss
+++ b/core/src/css/component/battlegrounds/bgs-card-tooltip.component.scss
@@ -26,6 +26,10 @@
 				width: 34%;
 				top: -15%;
 			}
+
+			.stat-value {
+				font-size: 52px;
+			}
 		}
 	}
 }
